# oneAPI-samples

DirectProgramming/DPC++/DenseLinearAlgebra/guided_jacobi_eigen_gpu_optimization/: CMakeLists.txt  README.me  sample.json
DirectProgramming/DPC++/DenseLinearAlgebra/guided_jacobi_eigen_gpu_optimization/src/: 1_guided_jacobi_eigen_solver_cpu.cpp  2_guided_jacobi_eigen_solver_gpu_offload.cpp  CMakeLists.txt
